--- a/hooks-inicial/package.json
+++ b/hooks-inicial/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tabler/icons": "^1.117.0",
     "@tabler/icons-react": "^3.12.0",
+    "clsx": "^2.1.1",
     "next": "^14.0.3",
     "react": "^18",
     "react-dom": "^18",
